another js attempt

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <!-- Plotly.js -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="tester.js"></script>
 </head>
 
 <p>
