--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
-<title>Pounds to Kilograms Weight Converter</title>
-<body>
 
-<h2>Weight Converter</h2>
-<p>Type a value in the Pounds field to convert the value to Kilograms:</p>
 
-<p>
-  <label>Pounds</label>
-  <input id="inputPounds" type="number" placeholder="Pounds" oninput="weightConverter(this.value)" onchange="weightConverter(this.value)">
-</p>
-<p>Kilograms: <span id="outputKilograms"></span></p>
+<h1>Craig Cahillane Homepage</h1>
+<h2>Info</h2>
+<p>Occupation: 4th Year Grad Student at Caltech.  Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory.</p>
+<p>Current Residence: Pasadena, California</p>
+<p>Hometown: Rockford, Illinois</p>
+<p>Born: Honolulu, Hawaii</p>
+<p>Alma Mater: Notre Dame. Graduated 2014 with degrees in Physics and Computer Science.</p>
 
-<script>
-function weightConverter(valNum) {
-  document.getElementById("outputKilograms").innerHTML=valNum/2.2046;
-}
-</script>
 
-<h4>The Quadratic Formula</h4>
-\[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
-
+<h2>Some Useful Links:<h2>
+<a href="https://ccahilla.github.io/shot.html">Shot Noise Calculator</a>
+<p>Created by Craig Cahillane, 2017 November 26</p>
 </body>
 </html>
 
