port site to bootstrap css lib

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap.min.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Craig Cahillane Homepage</h1>
+      <h2>Info</h2>
+      <p>Occupation: 4th Year Grad Student at Caltech.  Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory.</p>
+      <p>Current Residence: Pasadena, California</p>
+      <p>Hometown: Rockford, Illinois</p>
+      <p>Born: Honolulu, Hawaii</p>
+      <p>Alma Mater: Notre Dame. Graduated 2014 with degrees in Physics and Computer Science.</p>
 
 
-<h1>Craig Cahillane Homepage</h1>
-<h2>Info</h2>
-<p>Occupation: 4th Year Grad Student at Caltech.  Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory.</p>
-<p>Current Residence: Pasadena, California</p>
-<p>Hometown: Rockford, Illinois</p>
-<p>Born: Honolulu, Hawaii</p>
-<p>Alma Mater: Notre Dame. Graduated 2014 with degrees in Physics and Computer Science.</p>
-
-
-<h2>Some Useful Links:<h2>
-<a href="https://ccahilla.github.io/shot.html">Shot Noise Calculator</a>
-<p>Created by Craig Cahillane, 2017 November 26</p>
-</body>
+      <h2>Some Useful Links:<h2>
+      <a href="shot.html">Shot Noise Calculator</a>
+      <p>Created by Craig Cahillane, 2017 November 26</p>
+    </div>
+  </body>
 </html>
-
