--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<body>
 
 <h1>Craig Cahillane Homepage</h1>
 <h2>Info</h2>
@@ -12,7 +12,7 @@
 
 
 <h2>Some Useful Links:<h2>
-<a href="https://ccahilla.github.io/shot.html">Shot Noise Calculator</a>
+<a href="shot.html">Shot Noise Calculator</a>
 <p>Created by Craig Cahillane, 2017 November 26</p>
 </body>
 </html>
