Added the bessel functions from https://github.com/SheetJS/bessel

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <p>Alma Mater: Notre Dame. Graduated 2014 with degrees in Physics and Computer Science.</p>
 
 
-        <h2>Some Useful Links:<h2>
+        <h2>Some Useful Links:</h2>
         <a href="shot.html">Shot Noise Calculator</a>
+
         <p>Created by Craig Cahillane, 2017 November 26</p>
     </div>
     </body>
