Added some figures

--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
     <div class="container">
 
         <h1>Craig Cahillane Homepage</h1>
-        <h2>Info</h2>
-        <p>Occupation: 4th Year Grad Student at Caltech.  Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory.</p>
-        <p>Current Residence: Pasadena, California</p>
-        <p>Hometown: Rockford, Illinois</p>
-        <p>Born: Honolulu, Hawaii</p>
-        <p>Alma Mater: Notre Dame. Graduated 2014 with degrees in Physics and Computer Science.</p>
+        <p>
+            <label>Occupation:</label> 
+            4th Year Physics Grad Student at <img src="figures/Caltech.png" alt="Caltech" style="width:82px;height:20px;"> 
+        </p>
+        <p>
+            Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory. <img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
+        </p>
+        <p>
+            <label>Current Residence:</label> Pasadena, California
+        </p>
+        <p>
+            <label>Hometown:</label> Rockford, Illinois
+        </p>
+        <p>
+            <label>Born:</label> Honolulu, Hawaii
+        </p>
+        <p>
+            <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> 
+  Notre Dame 2014. 
+        </p> 
+        <p>
+            Graduated with degrees in Physics and Computer Science.
+        </p>
 
 
         <h2>Some Useful Links:</h2>
