--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
         <h2>Some Useful Links:</h2>
         <a href="shot.html">Shot Noise Calculator</a>
-        <a href="noise.html">Coatings Thermal Noise Budget in my lab at Caltech</a>
+        <br>
+        <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
         <p>Created by Craig Cahillane, 2017 November 26</p>
     </div>
     </body>
