adds computed values on page load

--- a/shot.html
+++ b/shot.html
@@ -91,6 +91,7 @@
                 }
                 return howmany;
             }
+            shotNoiseConverter();
         </script>
 
         <p>Created by Craig Cahillane, 2017 November 26</p>
