--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <a href="shot.html">Shot Noise Calculator</a>
         <br>
         <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
+        
+        <h2>Publications:</h2>
+        <a href="https://arxiv.org/abs/1708.03023">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
         <p>Created by Craig Cahillane, 2017 November 26</p>
     </div>
     </body>
