--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
         
         <h2>Publications:</h2>
-        <a href="https://arxiv.org/abs/1708.03023">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
+        <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
+        <a href="https://arxiv.org/abs/1708.03023">(arXiv version)</a>
         <p>Created by Craig Cahillane, 2017 November 26</p>
     </div>
     </body>
