--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <a href="shot.html">Shot Noise Calculator</a>
         <br>
         <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
-        
+        <a href="game.html">Animations in Javascript</a>       
+ 
         <h2>Publications:</h2>
         <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
         <a href="https://arxiv.org/abs/1708.03023">(arXiv version)</a>
