fixed index.html to reference the correct thing again

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br>
         <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
         <br>
-        <a href="game.html">Animations in Javascript</a>       
+        <a href="fabryperot.html">Fabry-Perot Animations in Javascript</a>       
  
         <h2>Publications:</h2>
         <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
