First commit since the Large File Disaster

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <body>
     <div class="container">
 
-        <h1>Craig Cahillane Homepage</h1>
-        <p>
-            <label>Occupation:</label> 
+        <h1 class="text-center">Craig Cahillane</h1>
+        <p class="text-center">
             4th Year Physics Grad Student at <img src="figures/Caltech.png" alt="Caltech" style="width:82px;height:20px;"> 
         </p>
         <p>
@@ -33,6 +32,21 @@
         <p>
             Graduated with degrees in Physics and Computer Science.
         </p>
+        <p>
+            <label>Programming Languages</label>
+            <br> 
+            Tier 1: Python, C/C++, MATLAB
+            <br> 
+            Tier 2: Javascript
+        </p>
+        <p>
+            <label>Outreach:</label> 2015-2017 LIGO Outreach Lead.<br>
+            Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state, including Notre Dame. <br>
+            Developed new outreach demonstrations, including the <a href="blackholedemo.html">Black Hole Merger Demonstration</a> which simulates gravitational wave emission from black holes near the end of their lives.
+        </p>
+        <p>
+            <label>Interests:</label> Cosmoslogy, Astrophysics, Lasers, Optics, Control Systems, Golf, Tennis, Frisbee, Notre Dame Football, Hobbiest Electronics, 
+        </p>
 
 
         <h2>Some Useful Links:</h2>
@@ -43,9 +57,19 @@
         <a href="fabryperot.html">Fabry-Perot Animations in Javascript</a>       
  
         <h2>Publications:</h2>
+        <p>First Author:<br>
         <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
         <a href="https://arxiv.org/abs/1708.03023">(arXiv version)</a>
-        <p>Created by Craig Cahillane, 2017 November 26</p>
+        </p>
+        <br>
+        <p>Full Collaboration Papers:<br>
+        <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.119.161101">GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral</a>
+        <br>
+        <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.116.061102">Observation of Gravitational Waves from a Binary Black Hole Merger</a>
+        </p>
+        
+        <br><br>
+        <p>Created by Craig Cahillane, Last updated 2017 December 4</p>
     </div>
     </body>
 </html>
