Made the last dang commit look reasonable on the blackholedemo.html page

--- a/blackholedemo.html
+++ b/blackholedemo.html
@@ -13,7 +13,7 @@
 <body>
     <h2 class="text-center">Gravitational Wave Emission from a Binary Black Hole Merger 
     <br>in our two-dimensional spandex universe.</h2>
-    <p class="text-center"><a href="https://www.youtube.com/watch?v=YfSyhcFu_MM">YouTube Video in real time with a strobe light.</p>
+    <p class="text-center"><a href="https://www.youtube.com/watch?v=YfSyhcFu_MM">YouTube Video in real time with a strobe light.</a></p>
     <video style="display:block; margin: 0 auto;" controls="controls" width="800" height="600" 
         name="Gravitational Waves in a Spandex Universe" src="BlackHoleMergerDemonstrationSlowMotion3.mov"></video>
 </body>
