Added git to my list of skills

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             Graduated with degrees in Physics and Computer Science.
         </p>
         <p>
-            <label>Programming Languages</label>
+            <label>Programming Languages and Skills</label>
             <br> 
-            Tier 1: Python, C/C++, MATLAB
+            Tier 1: Python, C/C++, MATLAB, Unix
             <br> 
-            Tier 2: Javascript
+            Tier 2: Javascript, Git
         </p>
         <p>
             <label>Outreach:</label> 2015-2017 LIGO Outreach Lead.<br>
