Added some stuff about electronics experinence

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <h1 class="text-center">Craig Cahillane</h1>
         <p class="text-center">
             4th Year Physics Grad Student at <img src="figures/Caltech.png" alt="Caltech" style="width:82px;height:20px;"> 
+            Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory. <img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
         </p>
         <p>
-            Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory. <img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
+            <label>Current Research</label>
+            <br> 
+            I run the Coatings Thermal Noise laser optics lab at Caltech.  We are investigating coatings thermal noise for AlGaAs coatings using two 3.68 cm Fabry-Perot optical cavities.  This work is imperative for lowering the thermal noise in next-generation gravitational-wave detectors, increasing their sensitivity to gravitational-waves from binary black holes and neutron stars.
         </p>
         <p>
             <label>Current Residence:</label> Pasadena, California
@@ -28,8 +31,6 @@
         <p>
             <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> 
   Notre Dame 2014. 
-        </p> 
-        <p>
             Graduated with degrees in Physics and Computer Science.
         </p>
         <p>
@@ -40,12 +41,30 @@
             Tier 2: Javascript, Git
         </p>
         <p>
+            <label>Electronics Experience</label>
+            <br>
+            Tools
+            <br>
+            Spectrum Analyzers: SR785, Agilent A4395A, HP8560E
+            <br>
+            Oscilloscopes: Tektronics 3032 and 3034
+            <br>
+            Skills: Soldering, Circuit Design, Control Systems, Optical Alignment, General Lab Management
+        </p>
+        <p>
+            <label>Machining Experience</label>
+            <br>
+            Passed Caltech Machine Shop Course ME113
+            <br>
+            Trained on the Lathe, Mill, Bandsaw, Drillpress, Laser Printer, 3D Printer, and Waterjet.
+        </p>
+        <p>
             <label>Outreach:</label> 2015-2017 LIGO Outreach Lead.<br>
             Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state, including Notre Dame. <br>
             Developed new outreach demonstrations, including the <a href="blackholedemo.html">Black Hole Merger Demonstration</a> which simulates gravitational wave emission from black holes near the end of their lives.
         </p>
         <p>
-            <label>Interests:</label> Cosmoslogy, Astrophysics, Lasers, Optics, Control Systems, Golf, Tennis, Frisbee, Notre Dame Football, Hobbiest Electronics, 
+            <label>Interests:</label> Cosmoslogy, Astrophysics, Lasers, Optics, Control Systems, Golf, Tennis, Frisbee, Notre Dame Football, Arduino, Raspberry Pi 
         </p>
 
 
