--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <h1 class="text-center">Craig Cahillane</h1>
         <p class="text-center">
-            4th Year Physics Grad Student at <img src="figures/Caltech.png" alt="Caltech" style="width:82px;height:20px;"> 
-            Work in Experimental Gravity for LIGO, the Laser Interferometer Gravitational wave Observatory. <img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
+            4th Year Physics Grad Student at <img src="figures/Caltech.png" alt="Caltech" style="width:82px;height:20px;"><br> 
+            Work in Experimental Gravity for<img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;"> the Laser Interferometer Gravitational wave Observatory.         
         </p>
         <p>
             <label>Current Research</label>
