--- a/fabryperot.html
+++ b/fabryperot.html
@@ -14,6 +14,41 @@
             /* overflow: hidden; */
         }
     </style>
+    <style>
+        .slidecontainer {
+            width: 100%;
+        }
+
+        .slider {
+            -webkit-appearance: none;
+            width: 40%;
+            height: 25px;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+        }
+
+        .slider:hover {
+            opacity: 1;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            background: #FFDD99;
+            cursor: pointer;
+        }
+
+        .slider::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            background: #FFDD99;
+            cursor: pointer;
+        }
+    </style>
     <script src="math.js" type="text/javascript"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
@@ -46,10 +81,12 @@
             <label id="mirrorOneText">Mirror One Reflectivity $r_1$:&nbsp; <span id="mirror1refl"></span></label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <label id="mirrorTwoText">Mirror Two Reflectivity $r_2$:&nbsp; <span id="mirror2refl"></span></label>
         </p>
-        <p class="text-center">
-            <input id="MirrorOneReflectivity" type=range min=0 max=1.0 step=0.01 value=0.7 > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <input id="MirrorTwoReflectivity" type=range min=0 max=1.0 step=0.01 value=0.9 >
-        </p>
+        <div class="slidecontainer">
+            <p class="text-center">
+                <input id="MirrorOneReflectivity" type="range" class="slider" min=0 max=1.0 step=0.01 value=0.7 > &nbsp;&nbsp;&nbsp;&nbsp;
+                <input id="MirrorTwoReflectivity" type="range" class="slider" min=0 max=1.0 step=0.01 value=0.9 >
+            </p>
+        </div>
         <button type="button" class="btn btn-info btn-block" onclick="lockCavity()" id="lockerButton">Lock Cavity</button>
  
         <canvas id="c" style="width: 100%; height: 100%; border: 1px dashed black">
