fixed ITM reflectivity number to 98.6%

--- a/fabryperot.html
+++ b/fabryperot.html
@@ -57,9 +57,9 @@
 <body>
     <div class="container">
         <h1 id="titleText" class="text-center">Fabry-Perot Optical Cavity</h1>
-        <p class="text-center">
-            A laser is incident on two aligned mirrors. If the optics are an integer number of laser wavelengths away from one another, the laser will constructively interfere inside the optical cavity. This constructive interference amplifies the laser power in the cavity.
-            <br> In LIGO, both four kilometer long arms consist of Fabry-Perot cavities. When the LIGO detector arms achieve laser power amplification, the arms are "on resonance" or "locked". A locked LIGO detector is hyper-sensitive to minute motions in its arm lengths, as small motions will move the optics off resonance and will phase-shift light out of its arm cavities.
+        <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;A laser is incident on two aligned mirrors. If the optics are an integer number of laser wavelengths away from one another, the laser will constructively interfere inside the optical cavity. This constructive interference amplifies the laser power in the cavity.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;In LIGO, both four kilometer long arms consist of Fabry-Perot cavities. When the LIGO detector arms achieve laser power amplification, the arms are "on resonance" or "locked". A locked LIGO detector is hyper-sensitive to minute motions in its arm lengths, as small motions will move the optics off resonance and will phase-shift light out of its arm cavities.
         </p>
         <h4 id="headerText" class="text-center">
              Move the mirrors below around to try and lock the Fabry-Perot cavity!  The larger the optical gain, the better!
@@ -99,10 +99,10 @@
             <label id="cavityCouplingText">The cavity is <i><span id="cavityCoupling"></span></i>.</label> 
         </p>
         <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-        <p class="text-center">
-            The incident light $E_\mathrm{inc}$ comes into the cavity from the left.  At the correct cavity length, the light circulating $E_\mathrm{circ}$ is constructively interfering.  Light exits the cavity in transmission $E_\mathrm{trans}$ out the right.  Light reflected off the cavity $E_\mathrm{refl}$ moves left and creates a standing wave with the incident light.<br>
-            If $r_1 > r_2$, the cavity is <i>under-coupled</i>.  If $r_1 < r_2$, the cavity is <i>over-coupled</i>.  If $r_1 = r_2$, the cavity is <i>critically-coupled</i>.  Critically-coupled cavities have the unintuitive property that when the round-trip cavity length is equal to an integer number of laser wavelengths, $2 L = n \lambda$, all light incident on the cavity is fully transmitted: no light is reflected at all.  This is due to interference: all light that would be reflected destructively interferes with itself, leaving only transmitted light.<br>
-            The LIGO interferometer uses over-coupled cavities for it's arms, with reflectivities $r_1^2 = 94$% and $r_2^2 = 99.9999$% to enhance the amount of light resonanting in the arms. 
+        <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;The incident light $E_\mathrm{inc}$ comes into the cavity from the left.  At the correct cavity length, the light circulating $E_\mathrm{circ}$ is constructively interfering.  Light exits the cavity in transmission $E_\mathrm{trans}$ out the right.  Light reflected off the cavity $E_\mathrm{refl}$ moves left and creates a standing wave with the incident light.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;If $r_1 > r_2$, the cavity is <i>under-coupled</i>.  If $r_1 < r_2$, the cavity is <i>over-coupled</i>.  If $r_1 = r_2$, the cavity is <i>critically-coupled</i>.  Critically-coupled cavities have the unintuitive property that when the round-trip cavity length is equal to an integer number of laser wavelengths, $2 L = n \lambda$, all light incident on the cavity is fully transmitted: no light is reflected at all.  This is due to interference: all light that would be reflected destructively interferes with itself, leaving only transmitted light.
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;The LIGO interferometer uses over-coupled cavities for it's arms, with reflectivities $r_1^2 = 98.6$% and $r_2^2 = 99.9999$% to enhance the amount of light resonanting in the arms. 
         </p>
     </div>
 
