Some cosmetic changes to the main index.html

--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
         <p>
             <label>Electronics Experience</label>
             <br>
-            Tools
-            <br>
             Spectrum Analyzers: SR785, Agilent A4395A, HP8560E
             <br>
             Oscilloscopes: Tektronics 3032 and 3034
             <br>
-            Skills: Soldering, Circuit Design, Control Systems, Optical Alignment, General Lab Management
+            Skills: Soldering, Circuit Design, Control Systems, Optics, General Lab Management
         </p>
         <p>
             <label>Machining Experience</label>
@@ -59,21 +57,25 @@
             Trained on the Lathe, Mill, Bandsaw, Drillpress, Laser Printer, 3D Printer, and Waterjet.
         </p>
         <p>
-            <label>Outreach:</label> 2015-2017 LIGO Outreach Lead.<br>
-            Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state, including Notre Dame. <br>
-            Developed new outreach demonstrations, including the <a href="blackholedemo.html">Black Hole Merger Demonstration</a> which simulates gravitational wave emission from black holes near the end of their lives.
+            <label>Outreach:</label> 2015-2017 LIGO Outreach Lead.
+            <br>
+            Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state, including Notre Dame. 
+            <br>
+            Developed new outreach demonstrations, including the <a href="blackholedemo.html">Black Hole Merger Demonstration</a> which simulates gravitational wave emission from black hole binaries near the end of their lives.
+            <br>
+            I created an <a href="fabryperot.html">interactive Fabry-Perot optical cavity</a> to visualize how lasers and mirrors interact in a simple two-mirror resonator. 
         </p>
         <p>
             <label>Interests:</label> Cosmoslogy, Astrophysics, Lasers, Optics, Control Systems, Golf, Tennis, Frisbee, Notre Dame Football, Arduino, Raspberry Pi 
         </p>
 
 
-        <h2>Some Useful Links:</h2>
+        <h2>Links:</h2>
         <a href="shot.html">Shot Noise Calculator</a>
         <br>
         <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
         <br>
-        <a href="fabryperot.html">Fabry-Perot Animations in Javascript</a>       
+        <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>       
  
         <h2>Publications:</h2>
         <p>First Author:<br>
@@ -87,8 +89,9 @@
         <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.116.061102">Observation of Gravitational Waves from a Binary Black Hole Merger</a>
         </p>
         
-        <br><br>
-        <p>Created by Craig Cahillane, Last updated 2017 December 4</p>
+        <br>
+        <br>
+        <p>Created by Craig Cahillane, Last updated 2018 January 3</p>
     </div>
     </body>
 </html>
