--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <br>
         <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
         <br>
-        <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>       
+        <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>
+        <br> 
+        <a href="alcohol-tracker/index.html">Blood Alcohol Content Estimator in React</a>
  
         <h2>Publications:</h2>
         <p>First Author:<br>
