Trying to host an svg online

--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
         <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.119.161101">GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral</a>
         <br>
         <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.116.061102">Observation of Gravitational Waves from a Binary Black Hole Merger</a>
+        <br>
+        <a href="20191121_ArmPower_Measurements.svg">SVG plot of Arm Power Measurements</a>
         </p>
+
         
         <br>
         <br>
