Added lho noisebudget interactive svg

--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
         <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>
         <br> 
         <a href="alcohol-tracker/index.html">Blood Alcohol Content Estimator in React</a>
- 
+        <br>
+        <a href="20191121_ArmPower_Measurements.svg">SVG plot of Arm Power Measurements</a>
+        <br>
+        <a href="lho_noisebudget.svg">LIGO Hanford Noisebudget Interactive SVG</a>
+
+
         <h2>Publications:</h2>
         <p>First Author:<br>
         <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
@@ -96,8 +101,6 @@
         <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.119.161101">GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral</a>
         <br>
         <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.116.061102">Observation of Gravitational Waves from a Binary Black Hole Merger</a>
-        <br>
-        <a href="20191121_ArmPower_Measurements.svg">SVG plot of Arm Power Measurements</a>
         </p>
 
         
