Added OUT2 vs REFL SERVO ERR

--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
         <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>
         <br> 
         <a href="alcohol-tracker/index.html">Blood Alcohol Content Estimator in React</a>
+        
+        <h2>Interactive Plot Gallery:</h2>
+        <a href="lho_noisebudget.svg">LIGO Hanford Noisebudget Interactive SVG</a>
         <br>
         <a href="20191121_ArmPower_Measurements.svg">SVG plot of Arm Power Measurements</a>
         <br>
-        <a href="lho_noisebudget.svg">LIGO Hanford Noisebudget Interactive SVG</a>
+        <a href="Analog_OUT2_vs_REFL_SERVO_ERR.svg">Analog OUT2 vs REFL SERVO ERR SVG</a>
 
 
         <h2>Publications:</h2>
